<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="change_pic">Change Picture</string>
    <string name="change_title">Change Title</string>
    <string name="add_song">Add a song</string>
    <string name="url">Enter song Url</string>
    <string name="add_pic">Add a picture</string>
    <string name="add">Add</string>
    <string name="artist">Artist</string>
    <string name="song">Song</string>
    <string name="save_title">Save Title</string>
    <string name="save_pic">Save Picture</string>
    <string name="save">Save</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>